# spi_lib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflow/: build.yml
drivers/: spi_devices.c  spi_devices.h
examples/: example_all_devices.c
include/: spi.h
src/: spi.c
